<resources>
    <string name="app_name">VigScan</string>
    <string name="usuario">Usuario</string>
    <string name="n_mero_de_empleado">Número de empleado</string>
    <string name="contrase_a">Contraseña</string>
    <string name="hint_contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="escanear_qr">Escanear QR</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="error_1">No pudimos iniciar sesion, verifica que tus datos sean correctos</string>
    <string name="error_2">Ingresa el número de empleado y contraseña</string>
    <string name="error_3">Reintenta iniciar sesion para obtener toda la informacion</string>
    <string name="error_4">No se pudo obtener información de esta viga</string>
    <string name="error_5">No se pudo obtener actualizar el proceso de la viga, volver a intentar</string>
    <string name="largo">Largo</string>
    <string name="metros">mts</string>
    <string name="peso">Peso</string>
    <string name="kilogramos">kg</string>
    <string name="material">Material</string>
    <string name="defecto">Defecto</string>
    <string name="sin_defecto">Sin defecto</string>
    <string name="regresar">Regresar</string>
    <string name="actualizar">Actualizar</string>
    <string name="regresar_text">Por defecto de la viga regresar a proceso anterior</string>
    <string name="actualizar_al_proceso_actual">Actualizar al proceso actual</string>
    <string name="selecciona_el_defecto_que_tiene_la_viga">Selecciona un defecto</string>
    <string name="confirmar">Confirmar</string>
    <string name="show_success">Viga actualizada correctamente a: </string>
    <string name="show_success_final">Viga terminada, lista para envío a almacén</string>
</resources>